--- a/index.html
+++ b/index.html
@@ -300,6 +300,25 @@
                 </a>
               </p>
             </div>
+
+            <!-- WeChat 導線（QRコード） -->
+            <div class="wechat-contact" style="margin-top:16px; padding-top:12px; border-top:1px solid #e0e0e0;">
+              <p style="font-size:0.9em; color:#444; margin:0 0 8px;">
+                WeChatでのご相談をご希望の方は、下記のQRコードをご利用ください。
+              </p>
+              <div style="text-align:center;">
+                <img
+                  loading="lazy"
+                  decoding="async"
+                  src="assets/wechat-qr-goto.png"
+                  alt="WeChat QRコード（担当：後藤）"
+                  style="max-width:160px; width:100%; height:auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.15); background:#fff; padding:8px;"
+                >
+                <div style="font-size:0.8em; color:#666; margin-top:6px;">
+                  ※WeChatアプリでQRコードをスキャンしてください
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="reserve-actions">
